[gd_scene load_steps=20 format=2]

[ext_resource path="res://Enemy/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Enemy/CollisionShape2D.gd" type="Script" id=2]
[ext_resource path="res://Enemy/CollisionShape2D2.gd" type="Script" id=3]
[ext_resource path="res://hit and hurt/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://hit and hurt/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://spider attack/spider_attackup3.png" type="Texture" id=6]
[ext_resource path="res://spider attack/spider_attackup1.png" type="Texture" id=7]
[ext_resource path="res://spider attack/spider_attackup4.png" type="Texture" id=8]
[ext_resource path="res://spider attack/spider_attackup5.png" type="Texture" id=9]
[ext_resource path="res://spider attack/spider_attackup2.png" type="Texture" id=10]
[ext_resource path="res://Enemy/spider_detect.tscn" type="PackedScene" id=11]
[ext_resource path="res://Art Assets/Barrel.png" type="Texture" id=12]
[ext_resource path="res://Enemy/Wander.tscn" type="PackedScene" id=13]
[ext_resource path="res://Art Assets/Full Heart.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "heart",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "barrel",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.2558, 11.3136 )

[sub_resource type="CircleShape2D" id=3]
radius = 12.2634

[sub_resource type="CircleShape2D" id=4]
radius = 26.214

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19.4824, 25.4282 )

[node name="Spider_barrel" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "barrel"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.128525, -3.98391 )
shape = SubResource( 2 )
script = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -0.291992, -3.21191 )
shape = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.291992, 0 )
shape = SubResource( 4 )

[node name="enemy_detect" parent="." instance=ExtResource( 11 )]
collision_layer = 0

[node name="Wander" parent="." instance=ExtResource( 13 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
script = ExtResource( 3 )
[connection signal="heart_mode" from="." to="enemy_detect" method="_on_Spider_barrel_heart_mode"]
[connection signal="heart_mode" from="." to="Hitbox" method="_on_Spider_barrel_heart_mode"]
[connection signal="frame_changed" from="AnimatedSprite" to="CollisionShape2D2" method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_ended"]

[editable path="Hitbox"]

[editable path="Hurtbox"]

[editable path="enemy_detect"]

[editable path="Wander"]
